Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7262

Qt Creator crashes parsing large files

XMLWordPrintable

    • bd4762218373276b2f38e52d486db339c5428309

      If a file is suitably large enough after pre-processing, it will push a QByteArray to try and allocate an oversize chunk of memory, which will fail on Win/32.

      Reproduceable by trying to parse qt sources via File|New Project|Other Project|Import existing project on the qt src tree.

      File causing crash: "C:/Depot/qt/src/3rdparty/webkit/Source/WebKit2/WebProcess/WebCoreSupport/mac/WebSystemInterface.mm"

      Backtrace:
      0 RaiseException KERNELBASE 0x74cbb9bc
      1 CxxThrowException MSVCR90D 0x578bf8f2
      2 qBadAlloc qglobal.cpp 1992 0x57a7b73c
      3 QByteArray::realloc qbytearray.cpp 1470 0x57a9fc28
      4 QByteArray::append qbytearray.cpp 1690 0x57aa029e
      5 CPlusPlus::Preprocessor::out pp-engine.h 172 0x5320bc41
      6 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1007 0x53257e36
      7 CPlusPlus::Preprocessor::operator() pp-engine.cpp 613 0x5325613f
      8 CPlusPlus::Preprocessor::operator() pp-engine.cpp 600 0x5325606f
      9 CppTools::Internal::CppPreprocessor::sourceNeeded cppmodelmanager.cpp 626 0x5338943c
      10 CppTools::Internal::CppPreprocessor::run cppmodelmanager.cpp 344 0x53387411
      11 CppTools::Internal::CppModelManager::parse cppmodelmanager.cpp 1308 0x5338ee31
      12 QtConcurrent::StoredInterfaceFunctionCall2<void,void (__cdecl*)(QFutureInterface<void> &,CppTools::Internal::CppPreprocessor *,QStringList),CppTools::Internal::CppPreprocessor *,QStringList>::run runextensions.h 165 0x5339a914
      13 QThreadPoolThread::run qthreadpool.cpp 107 0x57a76cf8
      14 QThreadPrivate::start qthread_win.cpp 348 0x57a98cdf
      15 beginthreadex MSVCR90D 0x5784dfd3
      16 beginthreadex MSVCR90D 0x5784df69
      17 BaseThreadInitThunk KERNEL32 0x75fa339a
      18 __RtlUserThreadStart ntdll_77070000 0x770a9ef2
      19 _RtlUserThreadStart ntdll_77070000 0x770a9ec5

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            bilking Bill King
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes